@@ -1753,7 +1753,7 @@ nusa_tenggara_ideas = {
 		OR = {
 			primary_culture = nusa_tenggara
 			primary_culture = bimanese
-                        primary_culture = timorese
+            primary_culture = timorese
 		}
 	}
 	free = yes
