@@ -266,3 +266,4 @@ french_anglois_assimilation = { #Angevin culture event; replaces English/Modern 
 		}
 		set_ruler_culture = anglois
 	}
+}	
