@@ -519,6 +519,7 @@ split_american = { #Splits American into Yankee, Laurentian and Dixie
 			anglo_dixie_culture_region = yes
 		}
 		change_culture = anglo_dixie
+	}	
 	#Handle Primary switches via event to offer a choice
 	#Accepted Cultures
 	every_country = {
