@@ -7,11 +7,7 @@ edict_frontier_settlement = {
 	}
 	
 	allow = {
-		NOT = {
-			all_province_in_state = {
-				culture_group = ROOT
-			}
-		}
+		always = yes
 	}
 	
 	modifier = {	#More focused on coversion then development, unlike the standard settlement edict
