@@ -9,11 +9,7 @@ edict_settlement = {
 	}
 	
 	allow = {
-		NOT = {
-			all_province_in_state = {
-				culture_group = ROOT
-			}
-		}
+		always = yes
 	}
 	
 	modifier = {
