@@ -110,7 +110,11 @@ country_decisions = {
 			factor = 1
 	        modifier = { # make dutchs focus on forming netherlands instead of belgium
 	         	factor = 0.25
-	         	primary_culture = dutch
+	         	OR = {
+					primary_culture = dutch
+					primary_culture = dutch_modern
+					primary_culture = dutch_low_saxon
+				}	
 	        }
 		}
 		ai_importance = 400 #
