@@ -496,22 +496,22 @@ country_decisions = {
 		allow = {
 			lower_normandy_area = {
 				culture_group = british
-				owns_core_province = ROOT
+				is_core = ROOT
 				type = all
 			}
 			normandy_area = { #Upper Normandy
 				culture_group = british
-				owns_core_province = ROOT
+				is_core = ROOT
 				type = all
 			}
 			ile_de_france_area = {
 				culture_group = british
-				owns_core_province = ROOT
+				is_core = ROOT
 				type = all
 			}
 			picardy_area = {
 				culture_group = british
-				owns_core_province = ROOT
+				is_core = ROOT
 				type = all
 			}
 			owns_core_province = 183 #Paris
@@ -550,12 +550,12 @@ country_decisions = {
 		allow = {
 			guyenne_area = {
 				culture_group = british
-				owns_core_province = ROOT
+				is_core = ROOT
 				type = all
 			}
 			poitou_area = {
 				culture_group = british
-				owns_core_province = ROOT
+				is_core = ROOT
 				type = all
 			}
 			owns_core_province = 174 #Aquitaine
