@@ -5,7 +5,12 @@ country_decisions = {
 			NOT = { has_country_modifier = south_slavic_settlements }
 			OR = {
 				culture_group = south_slavic
-				any_owned_province = { south_slavic_cultures_country = yes }
+				primary_culture = old_bosnian_new
+				primary_culture = bosnian_new
+				primary_culture = bulgarian_new
+				primary_culture = croatian_new
+				primary_culture = slovene_new
+				primary_culture = serbian_new
 			}	
 		}
 
