@@ -3961,8 +3961,8 @@ province_event = { #Romain Spread
 	goto = root
 	
 	trigger = {
-		OWNER = { religion = catholic }
 		OWNER = { culture_group = french }
+		OWNER = { religion = catholic }
 		romain_culture_region = yes		
 		ci_french_crusader_settlement_check = yes
 		has_global_flag = CI_events_enabled
