@@ -1,5 +1,5 @@
 ﻿l_english:
-  #Countries
+ #Countries
  #UEF:0 "England-France" #Replaced by Vanilla AVE
  #UEF_ADJ:0 "Anglo-Français"
  ERO:0 "Empire romain d'Orient"
@@ -10,25 +10,26 @@
  SYL_ADJ:0 "Seychellois"
  MAU:0 "Mauritius"
  MAU_ADJ:0 "Mauritien"
-  #Missions
+ 
+ #Missions
  enables_francification_of_english:0 "The §YEnglish§! language gets converted into the §YBretain§! language of the §YLangues d'oïl§! language group."
 
-  #Modifiers
+ #Modifiers
  akademi_kreyol_ayisyen:0 "Akademi Kreyòl Ayisyen"
  desc_akademi_kreyol_ayisyen:0 "The Akademi Kreyòl Ayisyen regulates the orthography and development of our language, and encourages its use in education and government."
  french_new_catholic_settlements:0 "New Catholic Settlements"
  desc_french_new_catholic_settlements:0 "These provinces are filled with zeal after the recent expulsion of infidels, many devout Catholics are helping repopulate the area"
  french_stardardisation_modifier:0 "Standardised Oïl language"
  desc_french_stardardisation_modifier:0 "Enables the spread of the primary language in the Greater French region"
-  #Decisions
+ #Decisions
  standardise_ayisyen_decision_title:0 "Standardise Kreyòl Ayisyen"
  standardise_ayisyen_decision_desc:0 "This decision will create the Akademi Kreyòl Ayisyen"
  form_dual_monarchy_of_england_and_france_title:0 "Unify the Crowns of England and France"
  form_dual_monarchy_of_england_and_france_desc:0 "This decision will form the Union of England and France"
- form_dual_monarchy_of_england_and_france_FRA_tooltip:0 "The player must own the whole of the France region, have Standard French or Standard Occitan as a Primary Culture and have Reeducated the whole of England to the Bretain Language."
- standardise_french_language_title:0 "Standardise Oïl languages'
+ form_dual_monarchy_of_england_and_france_FRA_tooltip:0 "The country must own the whole of the France region, have Standard French or Standard Occitan as the Primary Language and have reeducated the whole of England to the Bretain Language."
+ standardise_french_language_title:0 "Standardise Oïl languages"
  standardise_french_language_desc:0 "The revolution has done away with the Ancien Regime, with it comes various new ideals, but how would the populace even know what we are saying if we don't speak the same language? If we standardise the Langues d'Oïl under our primary language we would better be able to maintain the ideals of the revolution. Enables spread of the primary language in the Greater Oïl Homelands."
-  #Events
+ #Events
  french_expansion.title:0 "Expansion of Francais Language"
  french_expansion.desc:0 "The influence of our Francais language near to the province of [Root.GetName] has caused the people living there to adopt our languages and customs, they are now speaking our variety of the Langues d'Oïl!"
  french_expansion.a:0 "Formidable!"
