@@ -262,7 +262,7 @@
  establish_usa_colony_title:0 "Establish a colony in Eastern America"
  formed_majapahit_flag:0 "Restored Majapahit"
  formed_majapahit_flag_desc:0 "After being sent into exile, we have managed to beat back the rebellious Muslims. With our empire restored, we can finally bring order to Nusantara."
- fra_carib_colony.tooltip:0 "§Y[Root.GetName]§! or their subjects own at least §Y5§! fully colonized provinces in the Colonial Lesser Antilles"﻿
+ fra_carib_colony.tooltip:0 "§Y[Root.GetName]§! or their subjects own at least §Y5§! fully colonized provinces in the Colonial Lesser Antilles"
  gen_north_india_powerful_subject.tooltip:0 "Any non-tributary subject country has at least §Y100§! total Development and less than §Y50§! Liberty Desire"
  grain_depot:0 "Granary"
  grain_depot_short:0 "Granary"
@@ -1607,7 +1607,7 @@
  yurats:0 "Yurats"
  selkup:0 "Selkup"
  mator:0 "Mator"
- kamassian:0 "Kanmazen šaket" #Kaŋmažən šəkət #ŋ ->  n  #ž -> z
+ kamassian:0 "Kanmazen šaket"  #Apparantly the game doesn't even like the proper symbols when commented out, so unfortunately I'll have to remove them just to get the error log to shut up)
  
  ######################################## Afro-Asiatic ######################################## (No comment on the size of these Berber could easily be split into 4...)
  ######### Berber ######### (Since these maybe split later, I'm going to categorize them by possible future group)
@@ -1754,7 +1754,7 @@
 
  ### South Semitic ###
  # Ethiopic #
- ethiopian_group:0 "Debubi Misirak’i Semawee"  #Amharic name, debubi misirak’i sēmawī (southeast semitic) #'ē' replaced with 'e', ī replaced with 'ee' 
+ ethiopian_group:0 "Debubi Misirak’i Semawee"  #Once again have to remove commented out symbols, this name is from Amharic and means southeast semitic
  amhara:0 "Amareñña" #'ə' replaced with 'e'
  harari:0 "Haaderinya" #'ā' replaced with 'aa'
  tigray:0 "Tigriñaa" #'ā' replaced with 'aa'
@@ -1766,7 +1766,7 @@
  gurage:0 "Gurage"      #Base BT loc
  
  # South Arabian #
- south_arabian_group:0 "Debubi Mi'irabi Semawee" #Amharic name (can't find any closer translations), debubi mi‘irabi sēmawī (southwest semitic) #'ē' replaced with 'e', ī replaced with 'ee' 
+ south_arabian_group:0 "Debubi Mi'irabi Semawee" #Once again have to remove commented out symbols, this name is from Amharic and means southwest semitic
  mahri_culture:0 "Mahrinya" #Kind of a guess based off of the precedent of Harari
  socotran_culture:0 "Méthel D-Saqátri"
  harsusi_culture:0 "Harsiyyet"
