@@ -3,6 +3,7 @@ Version 0.12.0.0
 ADDITIONS
  - (not yet in at the time of writing this log) Added various new colonial languages to German, Dutch, Spanish, Portuguese, Gaelic, Brythonic (and Unified Celtic) and Occitan 
  - Provinces will retain the native language and religion if said native population is under 1000
+ - Finally added localisation for the British settlement events courtesy of JP
 BUGS
  - Cleared out some more error log things, unfortunately I have no clue what is causing the repeative spam of the primary_culture thing in the log at the moment
  - Fixed missing '= yes' for the Poetvin expansion event
